# RuTubeOperatorAssistant

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.docker/clickhouse/: init-clickhouse.sql
.docker/nginx/: Dockerfile  nginx.conf
configs/: .env.example  Clickhouse.py  Environment.py  Minio.py
migrations/: env.py
migrations/versions/: c985ac990908_init.py
ml/: constants.py  lifespan.py  utils.py
ml/classificators/: swear_classifier.py  toxic_classifier.py
ml/dates_parser/: config.py  parser.py  preload.py
ml/embeddings/: image.py  text.py
ml/intention/: config.py  intention.py  train.py
ml/llm/: config.py  llm.py
ml/notebooks/: intention.ipynb  pipeline.ipynb  rag.ipynb
ml/rag/: chunkers.py  create_datasets.py  indexing.py
ml/rag/data/: aliases.json  dataset.csv  db_dataset.csv  global_dataset.csv
ml/rag/data/local-datasets/: ВИДЕО.csv  МОДЕРАЦИЯ.csv  МОНЕТИЗАЦИЯ.csv  ПОИСК.csv  ПРЕДЛОЖЕНИЯ.csv  ТРАНСЛЯЦИЯ.csv  УПРАВЛЕНИЕ АККАУНТОМ.csv
models/: analytic.py
repositories/clickhose/: rag.py
repositories/postgres/: analytic.py
routing/v1/: analytic.py  chat.py
schemas/: analytic.py  chat.py  minio.py  ml.py  rag.py
services/: analytic.py  chat.py  minio.py  ml.py  rag.py
tg-assistant/: .env.example  Dockerfile  addons.py  config.py  docker-compose.yml  main.py  pyproject.toml
