[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Леонид Чесников <leonid.chesnikov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.114.0"}
alembic = "^1.11.3"
loguru = "^0.7.0"
pre-commit = "^3.7.0"
asyncpg = "^0.29.0"
transformers = {extras = ["torch"], version = "^4.44.2"}
grpcio-tools = "^1.66.1"
grpcio = "^1.66.1"
clickhouse-connect = "^0.7.19"
pandas = "^2.2.3"
datasets = "^3.0.0"
joblib = "^1.2.2"
scikit-learn = "^1.3.0"
check-swear = "^0.1.4"
numpy = "<2.0.0"
pymorphy3 = "^2.0.2"
clip = {git = "https://github.com/openai/CLIP.git"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.3.7"


[tool.poetry.group.llm-check.dependencies]
llama-cpp-python = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["models/__init__.py"]